force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>County</fullName>
                
                
                    <label>County</label>
                
                </value>
            
                <value>
                
                    <fullName>Municipality</fullName>
                
                
                    <label>Municipality</label>
                
                </value>
            
                <value>
                
                    <fullName>Public School</fullName>
                
                
                    <label>Public School</label>
                
                </value>
            
                <value>
                
                    <fullName>Private School</fullName>
                
                
                    <label>Private School</label>
                
                </value>
            
                <value>
                
                    <fullName>Public Affordable-Surplus</fullName>
                
                
                    <label>Public Affordable-Surplus</label>
                
                </value>
            
                <value>
                
                    <fullName>Public Affordable-Deficit</fullName>
                
                
                    <label>Public Affordable-Deficit</label>
                
                </value>
            
                <value>
                
                    <fullName>Public Affordable-Unknown Budget</fullName>
                
                
                    <label>Public Affordable-Unknown Budget</label>
                
                </value>
            
                <value>
                
                    <fullName>MAPC</fullName>
                
                
                    <label>MAPC</label>
                
                </value>
            
                <value>
                
                    <fullName>MLP</fullName>
                
                
                    <label>MLP</label>
                
                </value>
            
                <value>
                
                    <fullName>C&amp;I</fullName>
                
                
                    <label>C&amp;I</label>
                
                </value>
            
                <value>
                
                    <fullName>Private Affordable</fullName>
                
                
                    <label>Private Affordable</label>
                
                </value>
            
                <value>
                
                    <fullName>Sewer</fullName>
                
                
                    <label>Sewer</label>
                
                </value>
            
                <value>
                
                    <fullName>Water</fullName>
                
                
                    <label>Water</label>
                
                </value>
            
                <value>
                
                    <fullName>Fire</fullName>
                
                
                    <label>Fire</label>
                
                </value>
            
                <value>
                
                    <fullName>Public Works</fullName>
                
                
                    <label>Public Works</label>
                
                </value>
            
                <value>
                
                    <fullName>Airport</fullName>
                
                
                    <label>Airport</label>
                
                </value>
            
                <value>
                
                    <fullName>Ambulance</fullName>
                
                
                    <label>Ambulance</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>