force-app/main/default/objects/Opportunity/fields/Date_Removed_from_Project__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed_from_Project__c</fullName>
    <inlineHelpText>Automatically set when all UASes related to this Opportunity are inactive, with a Date Removed From project, with at least one Allocation Schedule Subscription that was enacted, (unless all UASes related to the Opp are transferring).</inlineHelpText>
    <label>Date Removed from Project</label>
    <type>Date</type>
</CustomField>