force-app/main/default/objects/Opportunity/fields/Days_Since_Application_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Application_Receipt__c</fullName>
    <formula>today()- Application_Date__c</formula>
    <label>Days Since Application Receipt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>