force-app/main/default/objects/Opportunity/fields/Default_Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method_Type__c</fullName>
    <formula>TEXT(Account.Billing_Account__r.Zuora__Default_Payment_Method__r.Zuora__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type (Credit Card or ACH) from the customer&apos;s default payment method</inlineHelpText>
    <label>Default Payment Method Type</label>
    <type>Text</type>
</CustomField>