force-app/main/default/objects/Opportunity/fields/Disable_Emails__c.field-meta.xml
<CustomField>
    <fullName>Disable_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this opportunity will not receive workflow email alerts</description>
    <inlineHelpText>** IF CHECKED, DONT UNCHECK. Only use if a record is going to stay in disable emails. Double check workflow rules if you want to check and then uncheck.</inlineHelpText>
    <label>Disable Emails</label>
    <type>Checkbox</type>
</CustomField>