force-app/main/default/objects/Opportunity/fields/DocuSign_Recipient__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Recipient</label>
    <referenceTo>dsfs__DocuSign_Recipient_Status__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>