force-app/main/default/objects/Opportunity/fields/DocuSign_Subscription_Size__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Subscription_Size__c</fullName>
    <inlineHelpText>Used only for DocuSign - sum of UAS subscriptions</inlineHelpText>
    <label>DocuSign Subscription Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>