force-app/main/default/objects/Opportunity/fields/DS_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>DS_Envelope_ID__c</fullName>
    <label>DS Envelope ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>