force-app/main/default/objects/Opportunity/fields/Electricity_Provider__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Provider__c</fullName>
    <formula>Account.Electricity_Provider__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electricity Provider</label>
    <type>Text</type>
</CustomField>