force-app/main/default/objects/Opportunity/fields/Email_Template_Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Parent_Account_ID__c</fullName>
    <description>This field is a duplicate of the Parent Account ID -- was required to be referenced in an email template since there were 2 other fields with similar API names and field labels that the merge-fields were not working.</description>
    <formula>Account.Parent_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is a duplicate of the Parent Account ID -- was required to be referenced in an email template since there were 2 other fields with similar API names and field labels that the merge-fields were not working.</inlineHelpText>
    <label>Email Template Parent Account ID</label>
    <type>Text</type>
</CustomField>