force-app/main/default/objects/Opportunity/fields/Entity_DPU_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_DPU_Id__c</fullName>
    <label>Entity DPU Id #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>