force-app/main/default/objects/Opportunity/fields/Estimated_Lifetime_Savings__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lifetime_Savings__c</fullName>
    <formula>Annual_Electricity_Cost2__c *0.8*0.1*20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Lifetime Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>