force-app/main/default/objects/Opportunity/fields/Estimated_System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Estimated_System_Size_kW_DC__c</fullName>
    <label>Estimated System Size (kW DC)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>