force-app/main/default/objects/Opportunity/fields/FICO__c.field-meta.xml
<CustomField>
    <fullName>FICO__c</fullName>
    <formula>Value(Personal_Credit_Report2__r.LASERCA__Credit_Score__c)</formula>
    <label>FICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>