force-app/main/default/objects/Opportunity/fields/First_Bill_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Paid_Date__c</fullName>
    <description>Datetime when Salesforce recognizes that the first bill has been marked paid (in part or in full) by Zuora. Used for Partner Commission generation. Implemented in W-024076.</description>
    <label>First Bill Paid Date</label>
    <type>DateTime</type>
</CustomField>