force-app/main/default/objects/Opportunity/fields/First_Bill_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Sent_Date__c</fullName>
    <description>Datetime when Salesforce recognizes that the first bill has been sent by Zuora. Used for Partner Commission generation. Implemented in W-024076.</description>
    <label>First Bill Sent Date</label>
    <type>DateTime</type>
</CustomField>