force-app/main/default/objects/Opportunity/fields/Follow_Up_Contact__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Contact__c</fullName>
    <label>Follow-Up Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>