force-app/main/default/objects/Opportunity/fields/Follow_Up_Position__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Position__c</fullName>
    <label>Follow-Up Position</label>
    <length>25</length>
    <type>Text</type>
</CustomField>