force-app/main/default/objects/Opportunity/fields/Form_1_Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Form_1_Quality_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form 1 - Quality Check</label>
    <type>Checkbox</type>
</CustomField>