force-app/main/default/objects/Opportunity/fields/Generatin_Units__c.field-meta.xml
<CustomField>
    <fullName>Generatin_Units__c</fullName>
    <formula>CEILING(CS_Capacity_Allocated__c /25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generation Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>