force-app/main/default/objects/Opportunity/fields/Internal_Review_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review_Deadline__c</fullName>
    <label>Internal Review Deadline</label>
    <type>Date</type>
</CustomField>