force-app/main/default/objects/Opportunity/fields/Invoice_1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is for the 1st invoice. If CS, this should be the invoice for the first part of their commission.</inlineHelpText>
    <label>Invoice 1</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>