force-app/main/default/objects/Opportunity/fields/IRBD_Rate__c.field-meta.xml
<CustomField>
    <fullName>IRBD_Rate__c</fullName>
    <defaultValue>0.0189</defaultValue>
    <description>This is the post-buy-down rate to the customer</description>
    <label>IRBD Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>