force-app/main/default/objects/Opportunity/fields/kWDC_Derivation__c.field-meta.xml
<CustomField>
    <fullName>kWDC_Derivation__c</fullName>
    <inlineHelpText>Input 3 key items: 
- Confirmed or Estimated Consumption
- What % offset (confirmed or estimated)
- What yield</inlineHelpText>
    <label>kWDC Derivation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>