force-app/main/default/objects/Opportunity/fields/kWDC_Offtake__c.field-meta.xml
<CustomField>
    <fullName>kWDC_Offtake__c</fullName>
    <inlineHelpText>Latest best estimate on Opportunity size in kWDC (kWh x %offset / solar yield)</inlineHelpText>
    <label>kWDC Offtake</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>