force-app/main/default/objects/Opportunity/fields/kWh__c.field-meta.xml
<CustomField>
    <fullName>kWh__c</fullName>
    <label>kWh est.</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>