force-app/main/default/objects/Opportunity/fields/kWh_confirmed__c.field-meta.xml
<CustomField>
    <fullName>kWh_confirmed__c</fullName>
    <label>kWh confirmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>