force-app/main/default/objects/Opportunity/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <formula>Personal_Credit_Report2__r.LASERCA__Lead__r.Lead_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Number</label>
    <type>Text</type>
</CustomField>