force-app/main/default/objects/Opportunity/fields/Level_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Interest__c</fullName>
    <label>Level of Interest</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>1</fullName>
                
                
                    <label>1</label>
                
                </value>
            
                <value>
                
                    <fullName>2</fullName>
                
                
                    <label>2</label>
                
                </value>
            
                <value>
                
                    <fullName>3</fullName>
                
                
                    <label>3</label>
                
                </value>
            
                <value>
                
                    <fullName>4</fullName>
                
                
                    <label>4</label>
                
                </value>
            
                <value>
                
                    <fullName>5</fullName>
                
                
                    <label>5</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>