force-app/main/default/objects/Opportunity/fields/Lived_at_residence_more_than_six_months__c.field-meta.xml
<CustomField>
    <fullName>Lived_at_residence_more_than_six_months__c</fullName>
    <label>Lived at residence more than six months</label>
    <length>5</length>
    <type>Text</type>
</CustomField>