force-app/main/default/objects/Opportunity/fields/Load_Zone_Utility_4__c.field-meta.xml
<CustomField>
    <fullName>Load_Zone_Utility_4__c</fullName>
    <label>Load Zone &amp; Utility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEMA Eversource</fullName>
            </value>
            <value>
                <fullName>NEMA Municipal Electric Department</fullName>
            </value>
            <value>
                <fullName>NEMA National Grid</fullName>
            </value>
            <value>
                <fullName>NEMA/SEMA Eversource</fullName>
            </value>
            <value>
                <fullName>NEMA/WCMA Municipal Electric Department</fullName>
            </value>
            <value>
                <fullName>NEMA/WCMA National Grid</fullName>
            </value>
            <value>
                <fullName>SEMA Eversource</fullName>
            </value>
            <value>
                <fullName>SEMA Municipal Electric Department</fullName>
            </value>
            <value>
                <fullName>SEMA National Grid</fullName>
            </value>
            <value>
                <fullName>SEMA National Grid/Eversource</fullName>
            </value>
            <value>
                <fullName>SEMA/WCMA National Grid</fullName>
            </value>
            <value>
                <fullName>WCMA Eversource</fullName>
            </value>
            <value>
                <fullName>WCMA Eversource / Municipal Electric Department</fullName>
            </value>
            <value>
                <fullName>WCMA Municipal Electric Department</fullName>
            </value>
            <value>
                <fullName>WCMA National Grid</fullName>
            </value>
            <value>
                <fullName>WCMA Unitil</fullName>
            </value>
            <value>
                <fullName>Manual Lookup Required</fullName>
            </value>
            <value>
                <fullName>Bahamas Electricity Corporation</fullName>
            </value>
            <value>
                <fullName>Grand Bahama Power Company</fullName>
            </value>
            <value>
                <fullName>Orange and Rockland Utilities</fullName>
            </value>
            <value>
                <fullName>Central Hudson Gas &amp; Electric</fullName>
            </value>
            <value>
                <fullName>Green Mountain Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>