force-app/main/default/objects/Opportunity/fields/LoadZone__c.field-meta.xml
<CustomField>
    <fullName>LoadZone__c</fullName>
    <label>Load Zone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>