force-app/main/default/objects/Opportunity/fields/Mandatory_Site_Walk__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Site_Walk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Site Walk?</label>
    <type>Checkbox</type>
</CustomField>