force-app/main/default/objects/Opportunity/fields/Maximum_kW_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Maximum_kW_Subscription__c</fullName>
    <formula>Shared_Solar_System__r.Maximum_Subscription_Capacity_kWDC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum kW Subscription from related Shared Solar System</inlineHelpText>
    <label>Maximum kW DC Subscription</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>