force-app/main/default/objects/Opportunity/fields/Maximum_Monthly_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Monthly_Disbursement__c</fullName>
    <label>Maximum Monthly Payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>