force-app/main/default/objects/Opportunity/fields/MCEC_Funds_Reserved__c.field-meta.xml
<CustomField>
    <fullName>MCEC_Funds_Reserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCEC Funds Reserved</label>
    <type>Checkbox</type>
</CustomField>