force-app/main/default/objects/Opportunity/fields/MCEC_Status__c.field-meta.xml
<CustomField>
    <fullName>MCEC_Status__c</fullName>
    <formula>if ( or(text(StageName) = &quot;Cancelled&quot;,text(StageName)=&quot;Expired&quot;),&quot;Withdrawn&quot;,

if (text(StageName) = &quot;Unqualified&quot;, &quot;Denied&quot;, &quot;Pending&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCEC Opportunity Status</label>
    <type>Text</type>
</CustomField>