force-app/main/default/objects/Opportunity/fields/MED__c.field-meta.xml
<CustomField>
    <fullName>MED__c</fullName>
    <description>Municipal Electric Department</description>
    <formula>IF(
OR(

Zip_Code__c =&quot;01742&quot;,
Zip_Code__c =&quot;01833&quot;,
Zip_Code__c =&quot;01834&quot;,
Zip_Code__c =&quot;01860&quot;,
Zip_Code__c =&quot;01864&quot;,
Zip_Code__c =&quot;01867&quot;,
Zip_Code__c =&quot;01880&quot;,
Zip_Code__c =&quot;01889&quot;,
Zip_Code__c =&quot;01923&quot;,
Zip_Code__c =&quot;01937&quot;,
Zip_Code__c =&quot;01938&quot;,
Zip_Code__c =&quot;01940&quot;,
Zip_Code__c =&quot;01945&quot;,
Zip_Code__c =&quot;01949&quot;,
Zip_Code__c =&quot;01960&quot;,
Zip_Code__c =&quot;01961&quot;,
Zip_Code__c =&quot;01969&quot;,
Zip_Code__c =&quot;02062&quot;,
Zip_Code__c =&quot;02457&quot;,
Zip_Code__c =&quot;02478&quot;,
Zip_Code__c =&quot;02482&quot;,
Zip_Code__c =&quot;02494&quot;,
Zip_Code__c =&quot;01887&quot;,
Zip_Code__c =&quot;02031&quot;,
Zip_Code__c =&quot;02043&quot;,
Zip_Code__c =&quot;02044&quot;,
Zip_Code__c =&quot;02045&quot;,
Zip_Code__c =&quot;02048&quot;,
Zip_Code__c =&quot;02184&quot;,
Zip_Code__c =&quot;02185&quot;,
Zip_Code__c =&quot;02344&quot;,
Zip_Code__c =&quot;02346&quot;,
Zip_Code__c =&quot;02349&quot;,
Zip_Code__c =&quot;02718&quot;,
Zip_Code__c =&quot;02760&quot;,
Zip_Code__c =&quot;02761&quot;,
Zip_Code__c =&quot;02767&quot;,
Zip_Code__c =&quot;02768&quot;,
Zip_Code__c =&quot;02779&quot;,
Zip_Code__c =&quot;02780&quot;,
Zip_Code__c =&quot;02783&quot;,
Zip_Code__c =&quot;01011&quot;,
Zip_Code__c =&quot;01013&quot;,
Zip_Code__c =&quot;01014&quot;,
Zip_Code__c =&quot;01020&quot;,
Zip_Code__c =&quot;01021&quot;,
Zip_Code__c =&quot;01022&quot;,
Zip_Code__c =&quot;01040&quot;,
Zip_Code__c =&quot;01041&quot;,
Zip_Code__c =&quot;01075&quot;,
Zip_Code__c =&quot;01085&quot;,
Zip_Code__c =&quot;01086&quot;,
Zip_Code__c =&quot;01430&quot;,
Zip_Code__c =&quot;01436&quot;,
Zip_Code__c =&quot;01438&quot;,
Zip_Code__c =&quot;01450&quot;,
Zip_Code__c =&quot;01460&quot;,
Zip_Code__c =&quot;01468&quot;,
Zip_Code__c =&quot;01470&quot;,
Zip_Code__c =&quot;01471&quot;,
Zip_Code__c =&quot;01472&quot;,
Zip_Code__c =&quot;01505&quot;,
Zip_Code__c =&quot;01517&quot;,
Zip_Code__c =&quot;01520&quot;,
Zip_Code__c =&quot;01522&quot;,
Zip_Code__c =&quot;01541&quot;,
Zip_Code__c =&quot;01545&quot;,
Zip_Code__c =&quot;01546&quot;,
Zip_Code__c =&quot;01564&quot;,
Zip_Code__c =&quot;01583&quot;,
Zip_Code__c =&quot;01612&quot;,
Zip_Code__c =&quot;01719&quot;,
Zip_Code__c =&quot;01749&quot;,
Zip_Code__c =&quot;01775&quot;),

&quot;X&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MED</label>
    <type>Text</type>
</CustomField>