force-app/main/default/objects/Opportunity/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <type>TextArea</type>
</CustomField>