force-app/main/default/objects/Opportunity/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Email</fullName>
                
                
                    <label>Email</label>
                
                </value>
            
                <value>
                
                    <fullName>Phone</fullName>
                
                
                    <label>Phone</label>
                
                </value>
            
                <value>
                
                    <fullName>In Person</fullName>
                
                
                    <label>In Person</label>
                
                </value>
            
                <value>
                
                    <fullName>Skype</fullName>
                
                
                    <label>Skype</label>
                
                </value>
            
                <value>
                
                    <fullName>Conference</fullName>
                
                
                    <label>Conference</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>