force-app/main/default/objects/Opportunity/fields/NMC_Tariff__c.field-meta.xml
<CustomField>
    <fullName>NMC_Tariff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NMC Tariff</label>
    <referenceTo>Utility_NMC_Tariff__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>