force-app/main/default/objects/Opportunity/fields/NMC_Tariff_Method__c.field-meta.xml
<CustomField>
    <fullName>NMC_Tariff_Method__c</fullName>
    <label>NMC Tariff Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Automatic</fullName>
                
                
                    <label>Automatic</label>
                
                </value>
            
                <value>
                
                    <fullName>Manual</fullName>
                
                
                    <label>Manual</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>