force-app/main/default/objects/Opportunity/fields/NMC_Value__c.field-meta.xml
<CustomField>
    <fullName>NMC_Value__c</fullName>
    <formula>NMC_Tariff__r.Value_of_NMC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>