force-app/main/default/objects/Opportunity/fields/NMCPA__c.field-meta.xml
<CustomField>
    <fullName>NMCPA__c</fullName>
    <label>NMCPA/PPA Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Fixed Rate</fullName>
                
                    <default>true</default>
                
                    <label>Fixed Rate</label>
                
                </value>
            
                <value>
                
                    <fullName>With Escalator</fullName>
                
                
                    <label>With Escalator</label>
                
                </value>
            
                <value>
                
                    <fullName>Floating Discount</fullName>
                
                
                    <label>Floating Discount</label>
                
                </value>
            
                <value>
                
                    <fullName>Co-Development</fullName>
                
                
                    <label>Co-Development</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>