force-app/main/default/objects/Opportunity/fields/NMCPA_PPA_Rate_cents_kWh__c.field-meta.xml
<CustomField>
    <fullName>NMCPA_PPA_Rate_cents_kWh__c</fullName>
    <label>NMCPA/PPA Rate (USD/kWh)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>