force-app/main/default/objects/Opportunity/fields/NMCPA_PPA_Rate_Escalator__c.field-meta.xml
<CustomField>
    <fullName>NMCPA_PPA_Rate_Escalator__c</fullName>
    <label>NMCPA/PPA Rate Escalator</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>