force-app/main/default/objects/Opportunity/fields/Number_of_Years_at_Location__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_at_Location__c</fullName>
    <label>Number of Years at Location</label>
    <length>5</length>
    <type>Text</type>
</CustomField>