force-app/main/default/objects/Opportunity/fields/Number_of_Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_in_Business__c</fullName>
    <label>Number of Years in Business</label>
    <length>5</length>
    <type>Text</type>
</CustomField>